[package]
name = "buildgit"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.4", features = ["git2", "chrono", "semver"] }

[build-dependencies]
built = "0.4"
