[package]
name = "ed25519"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = {git = "https://github.com/namuyan/ed25519-dalek"}
rand = "0.7.3"
hex = "^0.4"
sha2 = { version = "0.8", default-features = false }

