[package]
name = "evm"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita-vm = "0.1.6"
log = "0.4.0"
env_logger = "0.8.2"
ethereum-types = "0.4.2"
hex = "0.4.2"
