[package]
name = "stu"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
tokio = { version = "1.3", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }
actix-rt = "2.2.0"